# ai-model-diagnoser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  model_diagnosis_report.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
examples/: example_usage.py
model_diagnoser/: __init__.py  automl_debugger.py  diagnose.py
model_diagnoser/ai/: __init__.py  explanation_llm.py  suggestions.py
model_diagnoser/detectors/: __init__.py  drift.py  imbalance.py  leakage.py  overfitting.py
model_diagnoser/metrics/: __init__.py  performance.py
model_diagnoser/reports/: __init__.py  html_report.py  pdf_report.py
model_diagnoser/utils/: __init__.py  helpers.py
tests/: test_diagnose.py
