[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "model-diagnoser"
version = "0.1.0"
description = "AI-powered machine learning model diagnostics and debugging toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

authors = [
  {name = "Sujen Purty"}
]

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.9",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jinja2>=3.1",
    "reportlab>=4.0",
    "tqdm>=4.65",
    "openai>=1.0"
]

keywords = [
    "machine-learning",
    "model-debugging",
    "ml-diagnostics",
    "automl",
    "data-science"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]


[tool.setuptools.packages.find]
where = ["."]